# live-bootcamp-project

./: README.md  compose.yml  docker.bat  docker.sh
.devcontainer/: devcontainer.json
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/migrations/: 20251106211041_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/domain/: email_client.rs  mock_email_client.rs  mod.rs  resend_email_client.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: data_stores.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  routes.rs
auth-service/tests/api/routes/: login.rs  logout.rs  mod.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
