[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
bytes = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
