[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
bytes = "1.7"
chrono = "0.4.35"
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lazy_static = "1.4"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "cookies",
], default-features = false }
